--- a/src/containers/mobile.css
+++ b/src/containers/mobile.css
@@ -1,17 +1,28 @@
 .mobile {
     margin: 0px;
-    padding: 40px;
+    padding: 40% 10%;
     text-align: center;
+    background: #080808;
+    color: #999;
+    height: 100vh;
+    overflow: hidden;
+}
+.mobile h2{
+  font-size: 40px;
 }
 .mobile button{
     font-size: 22px;
     margin-top: 10px;
 }
 .mobile-input__code{
-    display: block;
-    width: 100%;
-    height: 30px;
-    font-size: 22px;
+  display: block;
+  width: 100%;
+  height: 30px;
+  font-size: 22px;
+  color: #999;
+  background: transparent;
+  border: 2px #999 solid;
+  margin-bottom: 20px;
 }
 
 .wrapper {
